Fixed issue with white space on left bar of project page

--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,7 @@
 	--color-base-300: #e4f7c2;
 	--color-warning: #d0342c;
 	--color-neutral: #0e0e0e;
+	--color-success: rgba(34, 187, 51);
 }
 
 /* open-sans-latin-wght-normal */
